# retrofire

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README  README.md  README.txt  index.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: font_12x20.pbm  font_16x24.pbm  font_6x10.pbm  font_6x8.pbm  font_8x10.pbm
benches/: Cargo.toml  clip.rs  fill.rs  intersect.rs  isect.rs  renderer.rs  test.rs  vec.rs
benches/src/: renderer.rs
core/: Cargo.toml  README  README.md  triangle.ppm
core/examples/: hello_tri.rs
core/src/: geom.rs  lib.rs  math.rs  render.rs  util.rs
core/src/geom/: mesh.rs  prim.rs
core/src/math/: angle.rs  approx.rs  color.rs  float.rs  grad.rs  mat.rs  noise.rs  param.rs  point.rs  rand.rs  simd.rs  space.rs  spline.rs  vary.rs  vec.rs
core/src/render/: batch.rs  cam.rs  clip.rs  ctx.rs  debug.rs  light.rs  prim.rs  raster.rs  scene.rs  shader.rs  stats.rs  target.rs  tex.rs  text.rs  vis.rs
core/src/render/scene/: cam.rs
core/src/util/: ansi.rs  buf.rs  pixfmt.rs  pnm.rs  rect.rs  text.rs
core/tests/: rendering.rs  textured_quad.ppm
demos/: Cargo.toml  README  README.md
demos/assets/: basilica.ppm  crate.ppm  cubemap.ppm  font_8x12.pbm
demos/nostd/: Cargo.toml  LICENSE-MIT  README.md
demos/nostd/src/: main.rs
demos/wasm/: .gitignore  Cargo.toml  index.html
demos/wasm/src/: lib.rs  triangle.rs
docs/: index.html  index.md
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/retrofire/: all.html  index.html
docs/doc/search.desc/retrofire/: retrofire-desc-0-.js
docs/doc/src/retrofire/: lib.rs.html
docs/wasm/: index.html  style.css
docs/wasm/pkg/: wasm.js  wasm_bg.wasm
examples/curses/: torus.rs  triangle.rs
examples/sdl/: checkers.rs  ptx.rs  runner.rs  teapot.rs  tex_triangle.rs  triangle.rs
front/: Cargo.toml  README.md
front/src/: lib.rs  minifb.rs  sdl2.rs  sdl3.rs  wasm.rs
geom/: Cargo.toml  README  README.md
geom/src/: intersect.rs  io.rs  isect.rs  lib.rs  prism.rs  solids.rs  tess.rs  tp2.rs
geom/src/solids/: lathe.rs  platonic.rs  subdiv.rs
lib/front/: Cargo.toml
lib/front/src/: lib.rs  sdl.rs
lib/geom/: Cargo.toml
lib/geom/src/: bbox.rs  lib.rs  mesh.rs  mesh2.rs  solids.rs  teapot.rs
lib/math/: Cargo.toml
lib/math/src/: lib.rs  mat.rs  rand.rs  spline.rs  transform.rs  vary.rs  vec.rs
lib/render/: Cargo.toml
lib/render/src/: color.rs  hsr.rs  lib.rs  render.rs  scene.rs  shade.rs  stats.rs  tex.rs  text.rs  vary.rs
lib/render/src/fx/: anim.rs  mod.rs  particle.rs
lib/render/src/raster/: fill.rs  flat.rs  gouraud.rs  mod.rs  tests.rs  tex.rs
lib/synth/: Cargo.toml
lib/synth/src/: lib.rs  noise.rs
lib/util/: Cargo.toml
lib/util/src/: buf.rs  color.rs  io.rs  lib.rs  pixfmt.rs  tex.rs
resources/: cp437_16x16.ppm  cubemap.pbm  cubemap.ppm  font_12x20.pbm  font_12x20.ppm  font_12x20_packed.ppm  font_6x10.pbm  font_6x10.pgm  font_6x10.ppm  font_6x8.pgm  specular.ppm  specular2.pbm  specular2.ppm
src/: geom.rs  lib.rs  math.rs  render.rs
src/geom/: bbox.rs  mesh.rs  solids.rs  teapot.rs
src/math/: mat.rs  rand.rs  transform.rs  vary.rs  vec.rs
src/render/: color.rs  hsr.rs  raster.rs  shade.rs  stats.rs  tex.rs
src/render/raster/: flat.rs  gouraud.rs
tests/: integration.rs
