#                                                     ______
#                        ___                        /´  ____/\
#       __ ______ _____ /   /\_ _ ______ _____ __  /   /_/___/\ __ _____ ______
#    ==/  ´ ____/ __   \   ____/ ´ ____/  __  ` __    ___,  /==/  ´  ___/ __   \
#   ==/   /´=/   ______/  /==/   /´=/   /==/   /=/   /=/   /==/   /´=/   ______/\
#  ==/   /==/   /____/   /__/   /==/   /__/   /=/   /=/   /__/   /==/   /______\/
# ==/___/ ==\_______/\______/__/ ==\________,´_/   /==\______/__/ ==\________/\
# ==\___\/ ==\______\/\_____\__\/ ==\______/_____,´ /==\_____\___\/==\_______\/
#                                          \_____\,´

[workspace]
members = [
    "core",
    "demos",
    "front"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.3.0"
authors = ["Johannes 'Sharlin' Dahlström <johannes.dahlstrom@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdahlstrom/retrofire"
keywords = ["graphics", "gamedev", "demoscene", "retrocomputing", "rendering"]
categories = ["graphics", "game-development", "no-std"]

[profile.release]
opt-level = 2
lto = "thin"
debug = 1

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"
