#                                                   ______
#                       ___                       /´   ___/\
#     __ ______ _____ /   /\_ _ ______ _____ __  /   /_/___/\ __ _____ ______
#  ==/  ´ ____/ __   \   ____/ ´ ____/  __  ` __    ___,  /==/  ´  ___/ __   \
# ==/   /´=/   ______/  /==/   /´=/   /==/   /=/   /=/   /==/   /´=/   ______/\
# =/   /==/   /____/   /__/   /==/   /__/   /=/   /=/   /__/   /==/   /______\/
# /___/ ==\_______/\______/__/ ==\________,´_/   /==\______/__/ ==\________/\
# \___\/ ==\______\/\_____\__\/ ==\______/_____,´ /==\_____\___\/==\_______\/
#                                        \_____\,´

[package]
name = "retrofire"
description = "90s style software 3D renderer and graphics tools."

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[workspace]
members = [
    "",
    "core",
    "geom",
    "front",
    "demos",
    "demos/wasm"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.0"
authors = ["Johannes 'Sharlin' Dahlström <johannes.dahlstrom@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdahlstrom/retrofire"
keywords = ["graphics", "gamedev", "demoscene", "retrocomputing", "rendering"]
categories = ["graphics", "game-development", "no-std"]

[workspace.lints]
clippy.manual_range_contains = "allow"
clippy.collapsible_if = "allow"

[features]
default = ["std"]
std = ["retrofire-core/std", "retrofire-geom/std"]

[dependencies]
retrofire-core = { version = "0.4.0", path = "core" }
retrofire-front = { version = "0.4.0", path = "front" }
retrofire-geom = { version = "0.4.0", path = "geom" }

[profile.release]
opt-level = 2
lto = "thin"
debug = 1

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"
