[package]
name = "retrofire-core"
description = "Core functionality of the retrofire project."

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[features]
# Support for floating-point functions.
fp = []
# Use std fp functions, enable I/O and timing support.
std = ["fp"]
# Use fp functions from the libm crate.
libm = ["fp", "dep:libm"]
# Use fp functions from the micromath crate.
mm = ["fp", "dep:micromath"]

[dependencies]
libm = { version = "0.2", optional = true }
micromath = { version = "2.1", optional = true }
