#                                                   ______
#                       ___                       /´   ___/\
#     __ ______ _____ /   /\_ _ ______ _____ __  /   /_/___/\ __ _____ ______
#  ==/  ´ ____/ __   \   ____/ ´ ____/  __  ` __    ___,  /==/  ´  ___/ __   \
# ==/   /´=/   ______/  /==/   /´=/   /==/   /=/   /=/   /==/   /´=/   ______/\
# =/   /==/   /____/   /__/   /==/   /__/   /=/   /=/   /__/   /==/   /______\/
# /___/ ==\_______/\______/__/ ==\________,´_/   /==\______/__/ ==\________/\
# \___\/ ==\______\/\_____\__\/ ==\______/_____,´ /==\_____\___\/==\_______\/
#                                        \_____\,´

[package]
name = "retrofire-core"
description = "Core functionality of the retrofire project."

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[features]
default = ["std"]
# Use std fp functions, enable I/O and timing support.
std = ["fp"]
# Use fp functions from the libm crate.
libm = ["fp", "dep:libm"]
# Use fp functions from the micromath crate.
mm = ["fp", "dep:micromath"]
# For internal use only.
fp = []

[dependencies]
libm = { version = "0.2", optional = true }
micromath = { version = "2.1", optional = true }

[lints]
workspace = true
