#                                                   ______
#                       ___                       /´   ___/\
#     __ ______ _____ /   /\_ _ ______ _____ __  /   /_/___/\ __ _____ ______
#  ==/  ´ ____/ __   \   ____/ ´ ____/  __  ` __    ___,  /==/  ´  ___/ __   \
# ==/   /´=/   ______/  /==/   /´=/   /==/   /=/   /=/   /==/   /´=/   ______/\
# =/   /==/   /____/   /__/   /==/   /__/   /=/   /=/   /__/   /==/   /______\/
# /___/ ==\_______/\______/__/ ==\________,´_/   /==\______/__/ ==\________/\
# \___\/ ==\______\/\_____\__\/ ==\______/_____,´ /==\_____\___\/==\_______\/
#                                        \_____\,´

[package]
name = "retrofire-demos"
description = "Demo programs showcasing retrofire features."

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
re = { version = "0.4.0-pre3", path = "../core", package = "retrofire-core" }
re-front = { version = "0.4.0-pre3", path = "../front", package = "retrofire-front" }
re-geom = { version = "0.4.0-pre3", path = "../geom", package = "retrofire-geom", features = ["std"] }

minifb = { version = "0.27.0", optional = true }
sdl2 = { version = "0.35.2", optional = true }
pancurses = { version = "0.17.0", optional = true }

[features]
default = ["minifb"]
minifb = ["dep:minifb", "re-front/minifb"]
sdl2 = ["dep:sdl2", "re-front/sdl2"]

[[bin]]
name = "crates"
required-features = ["sdl2"]
default-features = false

[[bin]]
name = "curses"
required-features = ["pancurses"]

[lints]
workspace = true
