#                                                   ______
#                       ___                       /´   ___/\
#     __ ______ _____ /   /\_ _ ______ _____ __  /   /_/___/\ __ _____ ______
#  ==/  ´ ____/ __   \   ____/ ´ ____/  __  ` __    ___,  /==/  ´  ___/ __   \
# ==/   /´=/   ______/  /==/   /´=/   /==/   /=/   /=/   /==/   /´=/   ______/\
# =/   /==/   /____/   /__/   /==/   /__/   /=/   /=/   /__/   /==/   /______\/
# /___/ ==\_______/\______/__/ ==\________,´_/   /==\______/__/ ==\________/\
# \___\/ ==\______\/\_____\__\/ ==\______/_____,´ /==\_____\___\/==\_______\/
#                                        \_____\,´

[package]
name = "retrofire-demos"
description = "Demo programs showcasing retrofire features."

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
re = { version = "0.4.0", path = "..", package = "retrofire" }
re-front = { version = "0.4.0", path = "../front", package = "retrofire-front" }

minifb = { version = "0.27.0", optional = true }
sdl3 = { version = "0.16.2", optional = true, features = ["build-from-source"] }
pancurses = { version = "0.17.0", optional = true }

[features]
default = ["minifb"]
minifb = ["dep:minifb", "re-front/minifb"]
sdl3 = ["dep:sdl3", "re-front/sdl3"]

[[bin]]
name = "crates"
required-features = ["sdl3"]

[[bin]]
name = "curses"
required-features = ["pancurses"]

[lints]
workspace = true
