[package]
name = "retrofire-front"
description = "Frontends for writing simple programs with retrofire."

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[features]
std = ["retrofire-core/std"]
wasm = ["dep:wasm-bindgen", "dep:web-sys"]
wasm-dev = ["wasm", "dep:console_error_panic_hook"]

[dependencies]
retrofire-core = { path = "../core" }
minifb = { version = "0.25.0", optional = true }
sdl2 = { version = "0.35.2", optional = true }

wasm-bindgen = { version = "0.2.92", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.69"
optional = true
features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
]
