[package]
name = "retrofire-front"
description = "Frontends for writing simple programs with retrofire."

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
retrofire-core = { path = "../core", features = ["std"] }
minifb = { version = "0.25.0", optional = true }
sdl2 = { version = "0.35.2", optional = true }
