[package]
name = "retrofire-geom"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
re = { path = "../core", package = "retrofire-core" }

[features]
default = ["std"]
std = ["re/std"]
