#                                                   ______
#                       ___                       /´   ___/\
#     __ ______ _____ /   /\_ _ ______ _____ __  /   /_/___/\ __ _____ ______
#  ==/  ´ ____/ __   \   ____/ ´ ____/  __  ` __    ___,  /==/  ´  ___/ __   \
# ==/   /´=/   ______/  /==/   /´=/   /==/   /=/   /=/   /==/   /´=/   ______/\
# =/   /==/   /____/   /__/   /==/   /__/   /=/   /=/   /__/   /==/   /______\/
# /___/ ==\_______/\______/__/ ==\________,´_/   /==\______/__/ ==\________/\
# \___\/ ==\______\/\_____\__\/ ==\______/_____,´ /==\_____\___\/==\_______\/
#                                        \_____\,´

[package]
name = "retrofire-geom"
description = "Additional geometry tools for retrofire."

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
retrofire-core = { version = "0.4.0", path = "../core", default-features = false }

[features]
std = ["retrofire-core/std"]

[lints]
workspace = true
