[package]
name = "nostd"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies.libc]
version = "0.2.177"
default-features = false

[dependencies.re]
package = "retrofire-core"
version = "0.4.0-pre4"
path = "../../core"
default-features = false

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
panic = "abort"
debug = false
strip = true
